      (Closes: #639925)
    + Source ~/.vim/vimrc or ~/.vim/gvimrc in favor of ~/.vimrc or ~/.gvimrc.
    + Update sh syntax file
      - Recognize when sh is dash and change the default behavior highlighting
        to be POSIX instead of Bourne.  (Closes: #712657, #699172)
      - Correctly highlight text after a "--".  (Closes: #713922)

 -- James McCoy <jamessan@debian.org>  Wed, 05 Jun 2013 21:56:06 -0400

vim (2:7.3.923-3) unstable; urgency=low

  * Build-Conflict against ruby1.8{,-dev} to work around incorrect ruby{,-dev}
    Provides (c.f., #710022).

 -- James McCoy <jamessan@debian.org>  Sun, 23 Jun 2013 22:12:29 -0400

vim (2:7.3.923-2) unstable; urgency=low

  * Fix FTBFS with M-A Python.  (Closes: #701513)

 -- James McCoy <jamessan@debian.org>  Sun, 26 May 2013 22:18:36 -0400

vim (2:7.3.923-1) unstable; urgency=low

  * Merge upstream tag v7-3-923
    + Updated documentation for Python syntax file.  (Closes: #613038)
    + NetRW no longer creates files in ~/.vim (or ~/.vim itself) if
      g:netrw_dirhistmax <= 0.  (Closes: #635984)
  * Remove EOLed Oneiric and Hardy releases from Debian runtime files.  Add
    Saucy and wheezy-backports.
  * Bump Standards-Version to 3.9.4, no changes needed.
  * Recognize “-b $branch” as part of a Vcs-Git field.  (Closes: #702751)

 -- James McCoy <jamessan@debian.org>  Sun, 05 May 2013 23:07:27 -0400

vim (2:7.3.831-1) experimental; urgency=low

  * Merge upstream tag v7-3-831
    + Merged patches:
      - upstream/debian-runtime-spell.patch, upstream/if_py-crash.patch,
        upstream/netrw-syntax-fix.patch, upstream/remove-py_config.patch
    + 7.3.607: Swap fg and bg colors for completion menu.  (Closes: #680772)
    + 7.3.750: Fix off-by-one error in justify macro.  (Closes: #620106)
    + 7.3.751: Retry test61 once if it fails.
      - Remove the explicit ignoring of test61 failures in debian/rules
  * Mark "DM-Upload-Allowed" in debian/control files as an "Error", since the